--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ po/*~
 # RStudio Connect folder
 rsconnect/
 65183_65184.CDS-CDS.last.tdd10.cs0.filtered.dag.all.go_D20_g10_A5.aligncoords.gcoords.ks.txt
+ksplots.nb.html
