--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ po/*~
 rsconnect/
 65183_65184.CDS-CDS.last.tdd10.cs0.filtered.dag.all.go_D20_g10_A5.aligncoords.gcoords.ks.txt
 ksplots.nb.html
+Contamination_NChap2_final.txt
+Contamination_NChap1_final.txt
+SC_coverage/ScF2f5/css/
+SC_coverage/SCF2m12/css/
